# llvm-dialects

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-clang-tidy.yml  check-dialects-docker.yml  check-formatting.yml  check-typos.yml
docker/: Dockerfile  dialects-clang-tidy.Dockerfile  dialects.Dockerfile  update-dialects.sh
docs/: Constraints.md
example/: CMakeLists.txt  ExampleDialect.cpp  ExampleDialect.h  ExampleDialect.td  ExampleMain.cpp
include/llvm-dialects/Dialect/: Builder.h  ContextExtension.h  Dialect.h  Dialect.td  OpDescription.h  OpMap.h  OpSet.h  Utils.h  Verifier.h  Visitor.h
include/llvm-dialects/TableGen/: Common.h  Constraints.h  DialectType.h  Dialects.h  Evaluator.h  Format.h  GenDialect.h  LlvmTypeBuilder.h  NamedValue.h  Operations.h  Predicates.h  SequenceToOffsetTable.h  SymbolTable.h  Traits.h
lib/Dialect/: Builder.cpp  ContextExtension.cpp  Dialect.cpp  OpDescription.cpp  Utils.cpp  Verifier.cpp  Visitor.cpp
lib/TableGen/: Common.cpp  Constraints.cpp  DialectType.cpp  Dialects.cpp  Evaluator.cpp  Format.cpp  GenDialect.cpp  LlvmTypeBuilder.cpp  NamedValue.cpp  Operations.cpp  Predicates.cpp  SymbolTable.cpp  Traits.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/example/: CMakeLists.txt  ExampleDialect.h  ExampleDialect.td  ExampleMain.cpp  test-builder.test  test-generated.test  verifier-basic.ll  verifier-type.ll  visitor-basic.ll  visitor-rpot.ll
test/tablegen/: duplicate-ops.td  logic-or-free-variables.td  no-or-capture.test.td  no-type-result.td  single-vararg.td  superclass-vararg.td  vararg-non-tail-pos.td
test/unit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/unit/dialect/: CMakeLists.txt  TestDialect.cpp  TestDialect.h  TestDialect.td
test/unit/interface/: CMakeLists.txt  OpMapIRTests.cpp  OpMapTests.cpp  OpSetTests.cpp
utils/: llvm-dialects-tblgen.cpp
